# cursor-usage

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: HOW_THIS_WAS_BUILT.md  PUBLISHING.md
src/cursor_usage/: __init__.py  api.py  auth.py  cli.py  report.py
tests/: test_auth.py  test_report.py
